# trith

./: .gemspec  .gitignore  .yardopts  Buildfile  LICENSE  Makefile.am  README.md  README.rdoc  Rakefile  configure.ac
doc/: READING.md
doc/examples/: args.3th  hello.3th  hello.rb  sum.3th
doc/man/: Makefile.am
etc/: trith-core.nt  trith-core.ttl  trith-lang.nt  trith-lang.ttl
lib/: .gitignore  trith.rb
lib/trith/: cache.rb  compiler.rb  core.rb  function.rb  instruction.rb  machine.rb  optimizer.rb  program.rb  reader.rb  shell.rb  version.rb
spec/: cache_spec.rb  compiler_spec.rb  function_spec.rb  library_spec.rb  machine_spec.rb  optimizer_spec.rb  program_spec.rb  reader_spec.rb  rosettacode_spec.rb  spec_helper.rb  version_spec.rb
spec/math/: abs_spec.rb  acos_spec.rb  acosh_spec.rb  add_spec.rb  (+41 more)
src/: Makefile.am  trith.c  trith.h
src/java/trith/core/: booleanp.java  dup.java  falsep.java  nil.java  nilp.java  numberp.java  nump.java  stringp.java  truep.java  zerop.java
src/java/trith/lang/: AbstractMachine.java  BinaryOperator.java  Machine.java  NullaryOperator.java  Number.java  Operator.java  ParallelMachine.java  Promise.java  Reference.java  SequentialMachine.java  StackUnderflowError.java  StandardMachine.java  Symbol.java  UnaryOperator.java  UnaryStreamOperator.java  Value.java
src/java/trith/math/: abs.java  add.java  dec.java  div.java  inc.java  max.java  min.java  mod.java  mul.java  neg.java  pow.java  rem.java  sub.java
src/java/trith/stream/: cons.java  emptyp.java  first.java  last.java  length.java  nth.java  rest.java
(+63 files in other folders)
