AM_CFLAGS              = -std=c99 -pedantic
AM_CPPFLAGS            = $(GLIB_CFLAGS) -DG_DISABLE_DEPRECATED=1
LDADD                  = libtrith.la
lib_LTLIBRARIES        = libtrith.la
libtrith_la_SOURCES    = trith.h trith.c
libtrith_la_LIBADD     = $(GLIB_LIBS)
include_HEADERS        = trith.h
#bin_PROGRAMS           = 3th 3sh 3vm 3cc
#3th_SOURCES            = trith.h 3th.c
#3sh_SOURCES            = trith.h 3sh.c
#3vm_SOURCES            = trith.h 3vm.c
#3cc_SOURCES            = trith.h 3cc.c
